--- a/LLM.ipynb
+++ b/LLM.ipynb
@@ -894,7 +894,7 @@
     "                hmm = model[1]\n",
     "            if hmm is not None:\n",
     "                est_nll = all_models[dataset][model].estimate_nll(max_shots, hmm)\n",
-    "                for i in range(est_nll.shape[0]):\n",
+    "                for i in range(1, est_nll.shape[0]):\n",
     "                    est_nlls.append({\n",
     "                        \"law\": law,\n",
     "                        \"shots\": i,\n",
@@ -906,7 +906,7 @@
     "            else:\n",
     "                for hmm in df[\"hmm\"].unique():\n",
     "                    est_nll = all_models[dataset][model].estimate_nll(max_shots, hmm)\n",
-    "                    for i in range(est_nll.shape[0]):\n",
+    "                    for i in range(1, est_nll.shape[0]):\n",
     "                        est_nlls.append({\n",
     "                            \"law\": law,\n",
     "                            \"shots\": i,\n",
